Try to fix the gap between border radius and image

--- a/int/src/assets/style/components/tile.less
+++ b/int/src/assets/style/components/tile.less
@@ -31,7 +31,7 @@
   height: @width;
   border-color: @bg;
   border-style: solid;
-  box-shadow: inset 0 0 0px 20px white;
+  background: @bg;
 
   @media (min-width: @tab){
     top: -40px;
